<resources>
    <string name="app_name">Notification Scheduler 2</string>
    <string name="job_service">Job Service</string>
    <string name="job_ran_to_completion">Your job ran to completion!</string>
    <string name="network_type_required">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="requires">requires</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline</string>
    <string name="not_set">Not Set</string>
    <string name="progress_bar_text_not_set">Not set</string>
</resources>
